Update for Heroku deployment

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -1426,9 +1426,9 @@
             </div>
             
             <!-- Skill Radar Chart -->
-            <div class="skills-chart-container" data-aos="fade-up">
+            <!-- <div class="skills-chart-container" data-aos="fade-up">
                 <canvas id="skills-radar-chart"></canvas>
-            </div>
+            </div> -->
         </div>
     </section>
 
